objects/Picklist_Value_Id_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Id value config for global pick list values</description>
    <fields>
        <fullName>BrandId__c</fullName>
        <label>BrandId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CategoryId__c</fullName>
        <label>CategoryId</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChannelId__c</fullName>
        <label>ChannelId</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubChannelId__c</fullName>
        <label>SubChannelId</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Channel__c</fullName>
        <description>Sub Channel Name.</description>
        <label>Sub Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Picklist Value Id Config</label>
</CustomObject>